
2006-11-21  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py: Now actually overwrites a nonmodified user file
	with one from UserConfig.
	
	* ipy_profile_sh.py: Add dummy "depth" to var_expand lambda, 
	it was missing which broke the sh profile.
	
	* completer.py: file completer now uses explicit '/' instead
	of os.path.join, expansion of 'foo' was broken on win32 
	if there was one directory with name 'foobar'. 

	* A bunch of patches from Kirill Smelkov:
	
	* [patch 9/9] doc: point bug-tracker URL to IPythons trac-tickets.

	* [patch 7/9] Implement %page -r (page in raw mode) - 

	* [patch 5/9] ScientificPython webpage has moved

	* [patch 4/9] The manual mentions %ds, should be %dhist

	* [patch 3/9] Kill old bits from %prun doc.

	* [patch 1/9] Fix typos here and there.

2006-11-08  Ville Vainio  <vivainio@gmail.com>

	* completer.py (attr_matches): catch all exceptions raised 
	by eval of expr with dots.

2006-11-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (runsource): Prepend an 'if 1:' to the user
	input if it starts with whitespace.  This allows you to paste
	indented input from any editor without manually having to type in
	the 'if 1:', which is convenient when working interactively.
	Slightly modifed version of a patch by Bo Peng
	<bpeng-AT-rice.edu>.

2006-11-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (main): modified irunner so it automatically
	recognizes the right runner to use based on the extension (.py for
	python, .ipy for ipython and .sage for sage).

	* IPython/iplib.py (InteractiveShell.ipconfig): new builtin, also
	visible in ipapi as ip.config(), to programatically control the
	internal rc object.  There's an accompanying %config magic for
	interactive use, which has been enhanced to match the
	funtionality in ipconfig.

	* IPython/Magic.py (magic_system_verbose): Change %system_verbose
	so it's not just a toggle, it now takes an argument.  Add support